# nijisanji-vtuber-recommend

./: .gitignore  README.md  app.py  main.py  pyproject.toml
data/: __init__.py  mcp_data_loader.py  vtuber_data.py
mcp-server/: README.md  debug.js  debug2.js  package-lock.json  package.json
mcp-server/src/: index.ts
templates/: index.html
